[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/GUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/BarV5_Bar.png" type="Texture" id=2]
[ext_resource path="res://Assets/BarV5_ProgressBarBorder.png" type="Texture" id=3]
[ext_resource path="res://Assets/BarV5_ProgressBar.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/ExpressionPro.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureProgress" type="TextureProgress" parent="Control"]
margin_left = 391.0
margin_top = 641.0
margin_right = 782.0
margin_bottom = 697.0
value = 65.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="Control"]
margin_left = 734.0
margin_top = 575.0
margin_right = 774.0
margin_bottom = 631.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1"

[node name="Label2" type="Label" parent="Control"]
margin_left = 391.0
margin_top = 575.0
margin_right = 562.0
margin_bottom = 631.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "100"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = 1171.0
margin_right = 1277.0
margin_bottom = 114.0

[node name="Button" type="Button" parent="Control/VBoxContainer"]
margin_right = 106.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Quit"

[node name="Button2" type="Button" parent="Control/VBoxContainer"]
margin_top = 59.0
margin_right = 106.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Restart"

[connection signal="pressed" from="Control/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
